// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectFieldInput should render correctly 1`] = `
<div
  aria-pressed="false"
  class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field"
  id="test-field-toggle"
  role="listbox"
  tabindex="0"
>
  <div
    class="md-icon-separator md-text-field md-text-field--margin md-select-field--text-field"
  >
    <span
      class="md-icon-text"
    />
    <i
      class="md-icon material-icons"
    >
      arrow_drop_down
    </i>
  </div>
  <hr
    class="md-divider md-divider--text-field md-divider--expand-from-undefined md-divider--select-field"
  />
  <input
    id="test-field"
    name="something-select"
    type="hidden"
    value="3"
  />
</div>
`;

exports[`SelectFieldInput should render correctly 2`] = `
<div
  aria-pressed="false"
  class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field test-name"
  id="test-field-toggle"
  role="listbox"
  style="height:150px"
  tabindex="0"
>
  <div
    class="md-icon-separator md-text-field md-text-field--margin md-select-field--text-field"
  >
    <span
      class="md-icon-text"
    />
    <i
      class="md-icon material-icons"
    >
      arrow_drop_down
    </i>
  </div>
  <hr
    class="md-divider md-divider--text-field md-divider--expand-from-undefined md-divider--select-field"
  />
  <input
    id="test-field"
    name="something-select"
    type="hidden"
    value="3"
  />
</div>
`;

exports[`SelectFieldInput should render correctly 3`] = `
<div
  aria-pressed="false"
  class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field md-text test-name"
  id="test-field-toggle"
  role="listbox"
  style="height:150px"
  tabindex="0"
>
  <div
    class="md-icon-separator md-text-field md-text-field--margin md-select-field--text-field"
  >
    <span
      class="md-icon-text"
    >
      Something
    </span>
    <i
      class="md-icon material-icons"
    >
      arrow_drop_down
    </i>
  </div>
  <hr
    class="md-divider md-divider--text-field md-divider--expand-from-undefined md-divider--select-field"
  />
  <input
    id="test-field"
    name="something-select"
    type="hidden"
    value="3"
  />
</div>
`;

exports[`SelectFieldInput should render correctly 4`] = `
<div
  aria-pressed="false"
  class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field md-text test-name"
  id="test-field-toggle"
  role="listbox"
  style="height:150px"
  tabindex="0"
>
  <div
    class="md-icon-separator md-text-field md-text-field--margin md-select-field--text-field"
  >
    <span
      class="md-icon-text"
    >
      Something
    </span>
    <i
      class="md-icon material-icons"
    >
      arrow_drop_down
    </i>
  </div>
  <hr
    class="md-divider md-divider--text-field md-divider--expand-from-undefined md-divider--select-field"
  />
  <input
    id="test-field"
    name="something-select"
    type="hidden"
    value="3"
  />
</div>
`;

exports[`SelectFieldInput should render correctly 5`] = `
<div
  aria-pressed="false"
  class="md-paper md-paper--0 md-fake-btn md-fake-btn--no-outline md-select-field md-text--disabled test-name"
  disabled=""
  id="test-field-toggle"
  role="listbox"
  style="height:150px"
>
  <div
    class="md-icon-separator md-text-field md-text-field--margin md-select-field--text-field"
  >
    <span
      class="md-icon-text"
    >
      Something
    </span>
    <i
      class="md-icon material-icons md-text--disabled"
    >
      arrow_drop_down
    </i>
  </div>
  <hr
    class="md-divider md-divider--text-field md-divider--expand-from-undefined md-divider--select-field"
  />
  <input
    disabled=""
    id="test-field"
    name="something-select"
    type="hidden"
    value="3"
  />
</div>
`;

exports[`SelectFieldInput should render correctly 6`] = `
<div
  aria-pressed="false"
  class="md-paper md-paper--0 md-fake-btn md-fake-btn--no-outline md-select-field md-text--disabled test-name"
  disabled=""
  id="test-field-toggle"
  role="listbox"
  style="height:150px"
>
  <div
    class="md-icon-separator md-text-field md-select-field--btn"
  >
    <span
      class="md-icon-text"
    >
      Something
    </span>
    <i
      class="md-icon material-icons md-text--disabled"
    >
      arrow_drop_down
    </i>
  </div>
  <input
    disabled=""
    id="test-field"
    name="something-select"
    type="hidden"
    value="3"
  />
</div>
`;

exports[`SelectFieldInput should render correctly 7`] = `
<div
  aria-pressed="false"
  class="md-paper md-paper--0 md-fake-btn md-pointer--hover md-fake-btn--no-outline md-select-field md-text test-name"
  id="test-field-toggle"
  role="listbox"
  style="height:150px"
  tabindex="0"
>
  <div
    class="md-ink-container"
  />
  <div
    class="md-icon-separator md-text-field md-select-field--btn"
  >
    <span
      class="md-icon-text"
    >
      Something
    </span>
    <i
      class="md-icon material-icons"
    >
      arrow_drop_down
    </i>
  </div>
  <input
    id="test-field"
    name="something-select"
    type="hidden"
    value="3"
  />
</div>
`;
